--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@upstash/rag-chat": "^2.0.3",
     "@upstash/redis": "^1.34.3",
     "ai": "^4.0.19",
+    "lucide-react": "^0.468.0",
     "next": "15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
