--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@upstash/rag-chat": "^2.0.3",
     "@upstash/redis": "^1.34.3",
     "ai": "^4.0.19",
+    "backoff": "^2.5.0",
     "lucide-react": "^0.468.0",
     "next": "15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@types/backoff": "^2.5.5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
